# SpectrumToKernel

./: .gitignore  best_model.pth  kernel_estimator_final_generator_only.pth  kernel_estimator_full.pth  pyproject.toml  training_log.txt
Code/: DiscTest.py  Discriminator.py  KernelEstimator.py  PSDDataset.py  PipelineTest.py  Reconstruct.py  SplineEstimator.py  SplineTrain.py  TestNormalization.py  bspline.py  kernel_estimator_full.pth  test.py  train.py  utils.py
